--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = alfredosystems/Alfredo-NoU2@^2.0.7
+lib_deps = 
+	alfredosystems/Alfredo-NoU2@^2.0.7
+	tomstewart89/BasicLinearAlgebra@^5.1
